--- a/MidiConvert/cbo/templates/login.html
+++ b/MidiConvert/cbo/templates/login.html
@@ -143,7 +143,7 @@
                 <h1 class="form__title">Login</h1>
                 <div class="form__message form__message--error"></div>
                 <div class="form__input-group">
-                    <input id="username_email" type="text" class="form__input" autofocus placeholder="Username or email">
+                    <input id="user_name" type="text" class="form__input" autofocus placeholder="Username">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input-group">
@@ -162,22 +162,22 @@
                 <h1 class="form__title">Create Account</h1>
                 <div class="form__message form__message--error"></div>
                 <div class="form__input-group">
-                    <input type="text" id="signupUsername" class="form__input" autofocus placeholder="Username">
+                    <input type="text" id="newUsername" class="form__input" autofocus placeholder="Username">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input-group">
-                    <input type="text" class="form__input" autofocus placeholder="Email Address">
+                    <input type="email" id="newEmail" class="form__input" autofocus placeholder="Email Address">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input-group">
-                    <input type="password" class="form__input" autofocus placeholder="Password">
+                    <input type="password" id="newPassword" class="form__input" autofocus placeholder="Password">
                     <div class="form__input-error-message"></div>
                 </div>
                 <div class="form__input-group">
-                    <input type="password" class="form__input" autofocus placeholder="Confirm password">
+                    <input type="password" id="newConfirmPassword" class="form__input" autofocus placeholder="Confirm password">
                     <div class="form__input-error-message"></div>
                 </div>
-                <button class="form__button" type="submit">Continue</button>
+                <button class="form__button" onclick="createNewUser()" type="button">Continue</button>
                 <p class="form__text">
                     <a class="form__link" href="./" id="linkLogin">Already have an account? Sign in</a>
                 </p>
@@ -245,9 +245,53 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 
 function loginUser() {
-    let username = document.getElementById("username_email").value;
+    let username = document.getElementById("user_name").value;
     let password = document.getElementById("user_password").value;
-    if (username == "jim" && password != undefined) window.location.href = '/home/';
 
+    if ((username == undefined || !username) || (password == undefined || !password)) {
+        alert('Please enter your username and password or create an account.');
+        return;
+    }
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", '/validateUser/', true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.onreadystatechange = function(){
+        if (this.readyState === XMLHttpRequest.DONE && this.status === 200){
+            result = JSON.parse(xhr.response);
+            if (result.code == 200) {
+                window.location.href = '/home/';
+            } else {
+                alert(result.message);
+            }
+        }
+    }
+    xhr.send(JSON.stringify({username:username, password:password}));
+}
+
+function createNewUser() {
+    let username = document.getElementById("newUsername").value;
+    let email = document.getElementById("newEmail").value;
+    let password = document.getElementById("newPassword").value;
+    let confirmPassword = document.getElementById("newConfirmPassword").value;
+
+    if (password != confirmPassword) {
+        alert("Your passwords do not match! Please correct them.");
+        return;
+    }
+    var xhr = new XMLHttpRequest();
+    xhr.open("POST", '/createUser/', true);
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.onreadystatechange = function(){
+        if (this.readyState === XMLHttpRequest.DONE && this.status === 200){
+            result = JSON.parse(xhr.response);
+            if (result.code == 200) {
+                alert('Successful Account creation');
+                window.location.href = '/home/';
+            } else {
+                alert(result.message);
+            }
+        }
+    }
+    xhr.send(JSON.stringify({username:username, email:email, password:password}));
 }
 </script>
