--- a/MidiConvert/cbo/templates/login.html
+++ b/MidiConvert/cbo/templates/login.html
@@ -144,7 +144,7 @@
                 <div class="form__message form__message--error"></div>
                 <div class="form__input-group">
                     <input id="user_name" type="text" class="form__input" autofocus placeholder="Username">
-                    <div class="form__input-error-message"></div>
+                    <div id="user_name-error-message"></div>
                 </div>
                 <div class="form__input-group">
                     <input id="user_password" type="password" class="form__input" autofocus placeholder="Password">
@@ -250,6 +250,12 @@ function loginUser() {
 
     if ((username == undefined || !username) || (password == undefined || !password)) {
         alert('Please enter your username and password or create an account.');
+        return;
+    }
+
+    var letters = /^[0-9a-zA-Z]+$/;
+    if (!letters.test(username) || !letters.test(password)){ 
+        alert('You have illegal characters in your username. Numbers and letters only.')
         return;
     }
     var xhr = new XMLHttpRequest();
