Make the front page and canvas page a little nicer

--- a/MidiConvert/cbo/templates/index.html
+++ b/MidiConvert/cbo/templates/index.html
@@ -57,7 +57,6 @@
         </div>
       </form>
     </div>
-    ENDS search
     <!-- wrapper -->
     <div class="wrapper-header">
       <!-- navigation -->
@@ -89,7 +88,8 @@
   <div id="main">
     <!-- main-wrapper -->
     <div class="wrapper">
-      <div class="page-title">MIDIANGELO IS A WEBSITE USED TO CONVERT PIXEL ART TO MUSIC!</div>
+      <img style="height:200px; width:auto;" src={% static "minilogo_transparent.png" %} href="#">
+      <div class="page-title">.midiANGELO IS A WEBSITE USED TO CONVERT PIXEL ART TO MUSIC!</div>
       <div class="page-subtitle">Draw your art and convert it to music</div>
     </div>
     <div class="wrapper-slideshow">
