--- a/MidiConvert/cbo/templates/midiCanvas.html
+++ b/MidiConvert/cbo/templates/midiCanvas.html
@@ -8,73 +8,58 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <img style="" src={% static "minilogo.png" %} href="#">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+            <img style="height:150px; width:auto;" src={% static "minilogo_transparent.png" %} href="#">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="btn btn-primary" aria-current="page" href="/home">About Us</a>
             </li>
         </ul>
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div id="hello_username">
+            
         </div>
     </div>
-    </nav>
-<canvas id="mainCanvas" width="16" height="16" style="width:256px;height:256px"></canvas>
-<br>
-<select name="colors" id="colors">
-    <option value="black">Black</option>
-    <option value="white">White</option>
-    <option value="red">Red</option>
-    <option value="green">Green</option>
-    <option value="blue">Blue</option>
-</select>
-<div>
-    <p>Ctrl+Click to select multiple</p>
-    <select multiple id="soundfont_picker" style="min-height: 300px;">
-    
-    </select>
-<!-- Used this button to pull soundfonts
-    <button id="reload_soundfonts" onclick="getSoundfonts();">Get Soundfonts</button>
--->
+</nav>
+<div class="container" style="margin-top:15px;">
+    <div class="row justify-content-md-center">
+        <div class="col col-12">
+            <canvas id="mainCanvas" width="16" height="16" style="width:256px;height:256px"></canvas>
+            <br>
+            <select name="colors" id="colors">
+                <option value="black">Black</option>
+                <option value="white">White</option>
+                <option value="red">Red</option>
+                <option value="green">Green</option>
+                <option value="blue">Blue</option>
+            </select>
+            <div>
+                <p>Ctrl+Click to select multiple</p>
+                <select multiple id="soundfont_picker" style="min-height: 300px;">
+                
+                </select>
+            <!-- Used this button to pull soundfonts
+                <button id="reload_soundfonts" onclick="getSoundfonts();">Get Soundfonts</button>
+            -->
+            </div>
+            <div>
+                <button id="convert">Convert</button>
+                <p>Increase Decibels before conversion</p>
+                <input id="db_boost" type="number" min="-50" max="50" value="0"/>
+            </div>
+            <div>
+                <button class="btn-dark" id="convert">Convert</button>
+            </div>
+            <div id="mediaParent">
+                <audio controls>
+                    <source id="source" src="" type="audio/ogg">
+                </audio>
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    <button id="convert">Convert</button>
-    <p>Increase Decibels before conversion</p>
-    <input id="db_boost" type="number" min="-50" max="50" value="0"/>
-</div>
-<div>
-    <button class="btn-dark" id="convert">Convert</button>
-</div>
-<div id="mediaParent">
-    <audio controls>
-        <source id="source" src="" type="audio/ogg">
-    </audio>
-</div>
-
-
 <script id="pageScript">
     window.addEventListener("load", () =>{
         const canvas = document.querySelector('#mainCanvas');
@@ -256,7 +241,7 @@
     }
     getSoundfonts();
 
-    
+    document.getElementById("hello_username").innerHTML = 'Hello '+JSON.parse(localStorage.getItem('user')).username+'!';
 </script>
 <style>
 #mainCanvas{
