Change browser tab icon to be midi logo

--- a/MidiConvert/cbo/templates/login.html
+++ b/MidiConvert/cbo/templates/login.html
@@ -135,6 +135,7 @@
 <html>
     <head>
         {% load static %} <!-- Prepare django to load static files -->
+        <link rel="icon" href={% static "minilogo_transparent.png" %}>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="UTF-8">
