--- a/MidiConvert/cbo/templates/midiCanvas.html
+++ b/MidiConvert/cbo/templates/midiCanvas.html
@@ -4,6 +4,7 @@
 <html>
 <head>
     {% load static %} <!-- Prepare django to load static files -->
+    <link rel="icon" href={% static "minilogo_transparent.png" %}>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
