--- a/MidiConvert/cbo/templates/index.html
+++ b/MidiConvert/cbo/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   {% load static %} <!-- Prepare django to load static files -->
+  <link rel="icon" href={% static "minilogo_transparent.png" %}>
   <title>MIDIANGELO WEBSITE FRONT</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- CSS -->
