--- a/MidiConvert/cbo/templates/midiCanvas.html
+++ b/MidiConvert/cbo/templates/midiCanvas.html
@@ -40,7 +40,7 @@
             </div>
         <div id="conversion">            
             <div>
-                <p>Ctrl+Click to select multiple</p>
+                <p>Ctrl+Click to Select Multiple</p>
                 <select multiple id="soundfont_picker" style="min-height: 300px;">
                 
                 </select>
@@ -49,7 +49,7 @@
             -->
             </div>
             <div>
-                <p>Increase Decibels before conversion</p>
+                <p>Increase/Decrease Decibels Before Conversion</p>
                 <input id="db_boost" type="number" min="-50" max="50" value="0"/>
             </div>
             <div>
